# py3o.template

./: .drone.yml  README.rst  pyproject.toml  release.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: docs-req.txt
docs/source/: conf.py  hacking.rst  pythoncode.rst  templating.rst
example/: example.py  example_calc.py  example_dynimage.py  example_nested_loop.py  example_pagebreak.py  example_single_cell.py  example_text.py
py3o/template/: __init__.py  data_struct.py  helpers.py  main.py
py3o/template/tests/: test_helpers.py  test_templates.py  utils.py
py3o/template/tests/templates/: py3o_template_format_currency.odt  template_format_currency_result.xml  template_format_datetime_result.xml
