[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py3o.template"
description = "An easy solution to design reports using LibreOffice"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["LibreOffice", "OpenOffice", "templating", "PDF"]
authors = [{name = "Florent Aide", email = "florent.aide@gmail.com"}]
license = "MIT"
dependencies = [
    "babel",
    "lxml",
    "genshi >= 0.7",
    "Pillow",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OCA/py3o.template/"
Source = "https://github.com/OCA/py3o.template/"
Issues = "https://github.com/OCA/py3o.template/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["py3o"]
exclude = ["py3o/template/tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = []
